ingress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-kube-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pod-kube-1

  template:
    metadata:
      name: pod-kube-1
      labels:
        app: pod-kube-1
    spec:
      containers:
        - name: nginx-container
          image: nginx
          resources:
            limits:
              cpu: 250m
              memory: 100Mi
            requests:
              cpu: 25m
              memory: 50Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-vol
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: static-vol
          hostPath:
            path: /home/kube/kubelabs/assets/14
