nodeport-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubedemo
spec:
  type: NodePort
  ports:
    - targetPort: 8080 # POD port
      port: 80 # service port
      nodePort: 30080
  selector: # POD labels
    app: kubelabs
    # type: frontend
