pod-storage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-storage
  labels:
    app: pod-storage
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: static-vol
          mountPath: /usr/share/nginx/html/index.html # destino dentro del Pod
          readOnly: true # solo lectura
          subPath: index.html # evita sobreescribir el contenido completo de .../html/
  volumes:
    - name: static-vol
      hostPath:
        # el PATH debe existir en el WORKER NODE
        # evitar este tipo de Storage y sustituir por algún tipo de Storage fuera del Worker Node.        #
        path: /home/kube/kubelabs/assets/13
---
apiVersion: v1
kind: Service
metadata:
  name: pod-storage-svc
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      # nodePort: Si no define el NodePort, Kubernetes asigna un puerto aleatorio entre 30000-32768
  selector:
    app: pod-storage
