ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: svc-kube-1
      port:
        number: 80
  rules:
  - host: royroj0f.kubelabs.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-kube-1
            port:
              number: 80

  - host: www.royroj0f.kubelabs.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-kube-1
            port:
              number: 80
